--- a/SE/HomeHome.html
+++ b/SE/HomeHome.html
@@ -115,7 +115,9 @@
   </header>
   <nav>
     <ul class="menu">
-
+      <li><a href="HomeHome.html" id="home">Home</a></li>
+	  <li><a href="SignedOutAnnouncement.html" id="home">Announcements</a></li>
+	  <li><a href="SO_Contact.html" id="home">Contact Us</a></li>
     </ul>
   </nav>
   <div class="container">
