--- a/SE/Home.html
+++ b/SE/Home.html
@@ -22,6 +22,8 @@
   <nav>
     <ul class="menu">
       <li><a href="HomeHome.html" id="home">Home</a></li>
+	  <li><a href="SignedOutAnnouncement.html" id="home">Announcements</a></li>
+	  <li><a href="SO_Contact.html" id="home">Contact Us</a></li>
     </ul>
   </nav>
   <main class="main-content">
