--- a/SE/Banker_points.html
+++ b/SE/Banker_points.html
@@ -49,7 +49,7 @@
   <div class="logo">
       <img src="SE/logo.png" alt="Logo">
     </div>
-    <h1>redeem Request</h1>
+    <h1>Redeem Request</h1>
 	<a href="Home.html" class="sign-out-button">Sign Out</a>
   </header>
    <nav>
@@ -101,7 +101,7 @@
             <td>23</td>
             <td>11223</td>
             <td id = "CC_ID2">127</td>
-            <td>50</td>
+            <td>1000</td>
             <td id = "status2">not redeemed</td>
             <td>
               <button class="redeem_button2" >redeem card points</button>
@@ -111,7 +111,7 @@
             <td>67</td>
             <td>166223</td>
             <td id = "CC_ID3">121</td>
-            <td>90</td>
+            <td>2500</td>
             <td id = "status3">not redeemed</td>
             <td>
               <button class="redeem_button3" >redeem card points</button>
