--- a/SE/AdminPage.html
+++ b/SE/AdminPage.html
@@ -139,11 +139,14 @@
             <li><a href="Liabilities_admin.html">Liabilities</a></li>
             <li><a href="Balance_admin.html">Balance</a></li>
             <li><a href="AdminTransactions.html">Transactions</a></li>
+            <li><a href="BillsAdmin.html">bill admin</a></li>
           </ul>
         </li>
         <li><a href="AnouncementsAdmin.html" id="anouncments">Announcements</a></li>
            <li><a href="Complaints_admin.html">Complaints</a></li>
            <li><a href="Close-requests.html">Request accounts close</a></li>
+           <li><a href="Open_request.html">Request accounts open</a></li>
+           <li><a href="Reminders.html">Reminders</a></li>
       </ul>
    </nav>
       <div class="center_container">
