--- a/SE/Liabilities_admin.html
+++ b/SE/Liabilities_admin.html
@@ -67,19 +67,24 @@
 	<a href="Home.html" class="sign-out-button">Sign Out</a>
   </header>
    <nav>
-      <ul class="menu">
-        <li><a href="AdminPage.html" id="home">Home</a></li>
-        <li class="dropdown">
-          <a href="#" id="client-account">Client's Account &#9662;</a>
-          <ul class="dropdown-menu">
-            <li><a href="Personalinfo_admin.html">Personal Information</a></li>
-            <li><a href="Liabilities_admin.html">Liabilities</a></li>
-            <li><a href="Balance_admin.html">Balance</a></li>
-          </ul>
-        </li>
-		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
-
-      </ul>
+    <ul  class="menu">
+      <li><a href="AdminPage.html" id="home">Home</a></li>
+      <li class="dropdown" >
+        <a href="#" id="client's_account">Client's Account &#9662;</a>
+        <ul class="dropdown-menu" >
+          <li><a href="Personalinfo_admin.html">Personal Information</a></li>
+          <li><a href="Liabilities_admin.html">Liabilities</a></li>
+          <li><a href="Balance_admin.html">Balance</a></li>
+          <li><a href="AdminTransactions.html">Transactions</a></li>
+          <li><a href="BillsAdmin.html">bill admin</a></li>
+        </ul>
+      </li>
+      <li><a href="AnouncementsAdmin.html" id="anouncments">Announcements</a></li>
+         <li><a href="Complaints_admin.html">Complaints</a></li>
+         <li><a href="Close-requests.html">Request accounts close</a></li>
+         <li><a href="Open_request.html">Request accounts open</a></li>
+         <li><a href="Reminders.html">Reminders</a></li>
+    </ul>
     </nav>
   <main>
     <div class="left-side">
