--- a/SE/Loan_requests.html
+++ b/SE/Loan_requests.html
@@ -79,6 +79,7 @@
       <table>
         <thead>
         <tr>
+          <th>User id</th>
           <th>Account Number</th>
           <th>Amount</th>
           <th>plan</th>
@@ -91,6 +92,7 @@
         <tbody>
         <tr>
           <td>1223</td>
+          <td>1223</td>
           <td>100,000</td>
           <td>2%-1year</td>
           <td>Ayman abdo</td>
@@ -102,6 +104,7 @@
           </td>
         </tr>
         <tr>
+          <td>1223</td>
             <td>1923</td>
             <td>100,000</td>
             <td>4%-2year</td>
@@ -114,6 +117,7 @@
             </td>
         </tr>
         <tr>
+          <td>1223</td>
             <td>193</td>
             <td>900,000</td>
             <td>7%-3year</td>
